sign-up and sign in services working

--- a/Web-API/appsettings.json
+++ b/Web-API/appsettings.json
@@ -8,5 +8,6 @@
   "ConnectionStrings": {
     "Default": "Server=172.16.100.47;Database=DbUniHorizonte;User Id=Ultron;Password=Eq5istema5; Trusted_Connection=false; TrustServerCertificate=True;"
   },
+  "SecretKey": "uniHorizonteSecretKey",
   "AllowedHosts": "*"
 }
